@@ -12,6 +12,6 @@ the wall ahead comes a view of darkest space.  There is a small adjoining
 room behind you, and a doorway right.
 
 >-: viper:
-I dont see any viper around here.
+I don't see any viper around here.
 >-: bye.
 Your rating was novice.
